# mpc_motion_planner

./: CMakeLists.txt  traj_gener_layout.xml  traj_tracking_layout.xml
analysis/: benchmark_analysis.ipynb  benchmark_data.txt  data_analysis.ipynb
examples/: comm_zmq.cpp  hw_zmq.cpp  offline_trajectory.cpp  online_tracking.cpp  online_traj_gener.cpp
mpc_solver/: motionPlanner.cpp  motionPlanner.hpp
